[package]
name = "panic-message"
version = "0.3.0"
edition = "2018"
authors = ["Gus Wynn <guswynn@gmail.com>"]
description = "Get a panic message from a panic payload"
documentation = "https://docs.rs/panic-message"
repository = "https://github.com/guswynn/panic-message"

license = "MIT OR Apache-2.0"

[dependencies]
